@@ -23,7 +23,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <jdk17.home>D:/IT/JDK/JDK17/jdk-17.0.12</jdk17.home>
+        <jdk17.home>D:/IT/JDK17/jdk-17.0.19+10</jdk17.home>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -184,6 +184,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
